pluto basic docs

--- a/index.mdx
+++ b/index.mdx
@@ -3,95 +3,35 @@ title: "Introduction"
 description: "Welcome to the new home for your documentation"
 ---
 
-## Setting up
+## Pluto Voice Assistant
 
-Get your documentation site up and running in minutes.
+Presenting Pluto, the world’s most accessible, scalable, and affordable Voice AI stack. Every day, over a billion business calls are made, yet 60 percent go unanswered. Human-led calling is expensive, limited in scale, and the AI solutions available today are costly to set up and run.
 
 <Card
   title="Start here"
   icon="rocket"
-  href="/quickstart"
+  href="/steps/pluto"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Follow our Pluto Voice Assistant step-by-step quickstart guide.
 </Card>
 
 ## Make it yours
 
-Design a docs site that looks great and empowers your users.
+Pluto changes this with a voice AI that is 35 percent more cost effective, available 24/7 for both inbound and outbound calls, and able to handle up to 10,000 calls a day. It supports 100 concurrent conversations across 100+ languages, with no setup costs. Using a drag-and-drop builder and 100+ integrations, businesses can deploy Pluto in less than ten minutes.
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+## Global Call Matrix
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+| Metric                             | 2023-2025 Global Estimate            | U.S.                         | India                                  | Europe                                               |
+| :----------------------------------: | :------------------------------------: | :---------------------------: | :-------------------------------------: | :---------------------------------------------------: |
+| Total voice calls made daily (all) | ~13.5B calls/day                     | ~2.9B/day                    | ~8-9B/day                              | Several B/day (e.g., DE ~0.85B/day, UK ~0.64B/day)    |
+| Business voice calls daily         | >1B/day                              | ~270M/day ( ~100B/year)     | Hundreds of M/day                      | Hundreds of M/day                                    |
+| Incoming business calls daily      | ~65% of business calls (~650M/day)   | ~175M/day                   | ~65% of India's business calls         | ~65% ratio                                           |
+| Outgoing business calls daily      | ~35% of business calls (~350M/day)   | ~95M/day                     | High outbound (93% spam/telemarketing) | ~35% ratio                                           |
+| Number of call centers             | ~165,000+                           | ~32,000                     | ~2,300+                               | Tens of thousands across EU                          |
+| Number of call center employees    | ~18M                                 | ~3M                         | 1M+                                    | Several M across EU                                  |
+| Cost of running call center (OpEx) | 60-75% labor; 15-25% tech            | $50-60K/agent/year          | $12-30K/agent/year                    | $40-55K/agent/year                                  |
+| Cost of voice calling (telco)      | $0.02-$0.10/min outbound avg         | $0.02-$0.05/min            | < $0.01/min (unlimited plans)          | $0.02-$0.05/min                                    |
+| Blended cost per call              | $2.70-$5.60 per handled call         | Similar; higher for complex  | Lower end (offshore)                   | Similar to U.S.                                      |
+| CapEx to set up large call center  | $1-$5M+ (facilities & equipment)    | Higher end                   | Lower end                              | Mid-high                                             |
+| OpEx for large call center         | Tens of M/year (500 seats)           | ~$25-30M/year (500 agents)   | < $10M/year (500 agents)               | $20M+/year                                          |
