pluto basic docs

--- a/steps/pluto.mdx
+++ b/steps/pluto.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Pluto Voice Assistant - Step-by-Step Guide"
+title: "Pluto Voice Assistant"
 description: "Complete guide to building a real-time AI voice assistant using SuperU SDK, WebSockets, and PyAudio for customer support and interactive applications."
 ---
 
