--- a/index.mdx
+++ b/index.mdx
@@ -1,9 +1,7 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Pluto Voice Assistant"
+description: "Pluto is the world’s most accessible, scalable and affordable Voice AI stack. It is designed to handle millions of business calls with ultra low latency, multilingual support and seamless integrations, while avoiding the high setup or operational costs of traditional call centers."
 ---
-
-## Pluto Voice Assistant
 
 Presenting Pluto, the world’s most accessible, scalable, and affordable Voice AI stack. Every day, over a billion business calls are made, yet 60 percent go unanswered. Human-led calling is expensive, limited in scale, and the AI solutions available today are costly to set up and run.
 
