--- a/steps/pluto.mdx
+++ b/steps/pluto.mdx
@@ -245,7 +245,7 @@ You can choose from many different AI voices by changing the `voice_id` paramete
 
 ## Additional Resources
 
-- [Join the SuperU Discord Community](https://discord.gg/superu)
+- [Join the SuperU Discord Community](https://discord.gg/cAVY7PnT)
 - [Watch Tutorial Videos](https://youtube.com/superu)
 - [SuperU Website](https://superu.ai)
 
