added voice IDS of elevenlabs

--- a/steps/pluto.mdx
+++ b/steps/pluto.mdx
@@ -237,9 +237,14 @@ The voice assistant operates through a real-time audio streaming process:
 
 You can choose from many different AI voices by changing the `voice_id` parameter. Each voice has a unique ID and supports various languages.
 
-<Note>
-  Contact SuperU support or check the documentation for a complete list of available voice IDs and their characteristics.
-</Note>
+<Card
+  title="Available Voices"
+  icon="rocket"
+  href="https://superu.notion.site/25a234ddb88f807697c2ea5c37c00c20?v=25a234ddb88f80559e75000c1c4d4983"
+  horizontal
+>
+  List of all available voice IDs with their description and tested out use cases.
+</Card>
 
 ---
 
