--- a/agents/use_superu.mdx
+++ b/agents/use_superu.mdx
@@ -10,14 +10,14 @@ import superu
 import time
 import json
 
-superu_client = superu.SuperU('o2hrEP1wQUCsqkob2dbXw2NmYQ') //your api key
+superu_client = superu.SuperU('<YOUR_API_KEY>') #Your Api Key
 
-phone_number = '919327434748' // number to call
+phone_number = '919327434748' #Number to call
 
 create_call = superu_client.calls.create(
-            from_='918035737904', // buy this number from [dev.superu.ai](http://dev.superu.ai/)/dashbaord
+            from_='918035737904', #Buy this number from dev.superu.ai
             to_=phone_number,
-            assistant_id='83789bdd-ab1b-40f2-9a91-8457dbb8b7d8', // Create assistant in next step
+            assistant_id='83789bdd-ab1b-40f2-9a91-8457dbb8b7d8', #Get this id when creating the assistant
             max_duration_seconds=120
         )
 
