Added the api references in docs

--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'Create Plant'
-openapi: 'POST /plants'
+title: 'Create Agent (Legacy Route)'
+openapi: 'POST /agent/create'
 ---
+
+This page is kept for compatibility with the older endpoint file structure.
