--- a/api-reference/endpoint/delete.mdx
+++ b/api-reference/endpoint/delete.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'Delete Plant'
-openapi: 'DELETE /plants/{id}'
+title: 'Delete Audience (Legacy Route)'
+openapi: 'DELETE /audience/delete'
 ---
+
+This page is kept for compatibility with the older endpoint file structure.
