--- a/api-reference/endpoint/get.mdx
+++ b/api-reference/endpoint/get.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'Get Plants'
-openapi: 'GET /plants'
+title: 'List Contacts (Legacy Route)'
+openapi: 'GET /contact/list'
 ---
+
+This page is kept for compatibility with the older endpoint file structure.
