--- a/api-reference/endpoint/webhook.mdx
+++ b/api-reference/endpoint/webhook.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'New Plant'
-openapi: 'WEBHOOK /plant/webhook'
+title: 'Import Agents (Legacy Route)'
+openapi: 'GET /agent/import'
 ---
+
+This page is kept for compatibility with the older endpoint file structure.
